# in-typ-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs  shared.rs  t.rs
crates/i18n/src/root/s_commands/s_help/: m_message.rs
crates/i18n/src/shared/: bot.rs  commands.rs
crates/i18n/src/t/: commands.rs  service.rs
crates/i18n/src/t/commands/: __help.rs  __start.rs  _help.rs  _start.rs  help.rs
crates/i18n/src/t/commands/help/: _message.rs
crates/in-typ-bot/: Cargo.toml
crates/in-typ-bot/src/: bot.rs  config.rs  logic.rs  main.rs
crates/in-typ-bot/src/bot/: common.rs  handlers.rs
crates/in-typ-bot/src/bot/handlers/: commands.rs  typst_requests.rs
crates/in-typ-bot/src/bot/handlers/commands/: help.rs  start.rs
crates/in-typ-bot/src/bot/handlers/typst_requests/: inline_query.rs  message.rs
crates/in-typ-bot/src/logic/: async_writeln.rs  filename.rs
i18n/: Cargo.toml
i18n/src/: root.rs
i18n/src/root/: s_commands.rs
i18n/src/root/s_commands/: s_help.rs
src/: bot.rs  logic.rs  main.rs
src/bot/: handlers.rs
src/bot/handlers/: commands.rs  typst_requests.rs
src/bot/handlers/commands/: help.rs  start.rs
src/bot/handlers/typst_requests/: inline_query.rs  message.rs
src/logic/: async_writeln.rs  filename.rs
