[workspace]
resolver = "3"
members = ["crates/*/"]
default-members = ["crates/in-typ-bot/"]

[workspace.package]
version = "0.0.0"

[workspace.dependencies]
i18n = { path = "crates/i18n/" }

dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
indoc = "2.0.6"
itertools = "0.14.0"
strum = "0.27.1"
svg = "0.18.0"
teloxide = "0.13.0"
thiserror = "2.0.12"
tokio = "1.44.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.16.0"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
