[workspace]
resolver = "3"
members = ["crates/*/"]
default-members = ["crates/in-typ-bot/"]

[workspace.package]
version = "0.0.0"

[workspace.dependencies]
const_format = "0.2.35"
dotenvy_macro = "0.15.7"
i18n = { path = "crates/i18n/" }
indoc = "2.0.6"
itertools = "0.14.0"
strum = "0.27.2"
svg = "0.18.0"
teloxide = "0.17.0"
thiserror = "2.0.17"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.18.1", features = ["fast-rng"] }

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
