[workspace]
resolver = "3"
members = ["crates/*/"]
default-members = ["crates/in-typ-bot/"]

[workspace.package]
version = "0.0.0"

[workspace.dependencies]
const_format = "0.2.36"
dotenvy = "0.15.7"
eyre = "0.6.12"
i18n = { path = "crates/i18n/" }
indoc = "2.0.7"
itertools = "0.15.0"
strum = "0.28.0"
svg = "0.18.0"
teloxide = "0.17.0"
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.4", features = ["fast-rng"] }

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
