[package]
name = "in-typ-bot"
version.workspace = true
edition = "2024"

[dependencies]
i18n = { workspace = true }
dotenvy_macro = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true, features = ["derive"] }
svg = { workspace = true }
teloxide = { workspace = true, features = ["macros"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "process",
  "rt-multi-thread",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["fast-rng"] }

[lints]
workspace = true
